yy/parser.output
State 109 conflicts: 1 shift/reduce


Grammar

    0 $accept: unit "end of file"

    1 unit: define_or_state
    2     | unit define_or_state

    3 define_or_state: error ';'
    4                | "def" "identifier" ':' "Register" ';'
    5                | "def" "identifier" ':' "Instruction" inst_block
    6                | "let" "projectName" '=' "identifier" ';'

    7 inst_block: '{' decl_list state_list '}'

    8 block: '{' state_list '}'

    9 decl_list: ε
   10          | decls

   11 state_list: ε
   12           | states

   13 decls: declaration
   14      | decls declaration

   15 declaration: "def" value ':' "local" ';'
   16            | "def" value ':' "rd" ';'
   17            | "def" value ':' "rs1" ';'
   18            | "def" value ':' "rs2" ';'

   19 states: statement
   20       | states statement

   21 statement: ';'
   22          | assign ';'
   23          | "identifier" '(' args ')' ';'
   24          | "identifier" '(' ')' ';'
   25          | "if" '(' expr ')' statement
   26          | "if" '(' expr ')' statement "else" statement
   27          | "while" '(' expr ')' statement
   28          | "load" value "<=" '<' value '>' ';'
   29          | "store" '<' value '>' "<=" value ';'
   30          | block

   31 assign: "let" value '=' expr
   32       | "let" value "+=" expr
   33       | "let" value "-=" expr

   34 expr: expr "&&" expr
   35     | expr "||" expr
   36     | expr "==" expr
   37     | expr "!=" expr
   38     | expr ">=" expr
   39     | expr "<=" expr
   40     | expr '>' expr
   41     | expr '<' expr
   42     | '-' expr
   43     | '(' expr ')'
   44     | value
   45     | "ival"
   46     | "identifier" '(' args ')'
   47     | "identifier" '(' ')'

   48 value: "identifier"

   49 args: expr
   50     | args ',' expr


Terminals, with rules where they appear

    "end of file" (0) 0
    '(' (40) 23 24 25 26 27 43 46 47
    ')' (41) 23 24 25 26 27 43 46 47
    ',' (44) 50
    '-' (45) 42
    ':' (58) 4 5 15 16 17 18
    ';' (59) 3 4 6 15 16 17 18 21 22 23 24 28 29
    '<' (60) 28 29 41
    '=' (61) 6 31
    '>' (62) 28 29 40
    '{' (123) 7 8
    '}' (125) 7 8
    error (256) 3
    "ival" <ival> (258) 45
    "identifier" <sval> (259) 4 5 6 23 24 46 47 48
    "||" (260) 35
    "&&" (261) 34
    "==" (262) 36
    "!=" (263) 37
    ">=" (264) 38
    "<=" (265) 28 29 39
    "+=" (266) 32
    "-=" (267) 33
    "if" (268) 25 26
    "else" (269) 26
    "while" (270) 27
    "def" (271) 4 5 15 16 17 18
    "let" (272) 6 31 32 33
    "Register" (273) 4
    "Instruction" (274) 5
    "local" (275) 15
    "load" (276) 28
    "store" (277) 29
    "projectName" (278) 6
    "rd" (279) 16
    "rs1" (280) 17
    "rs2" (281) 18
    NEG (282)


Nonterminals, with rules where they appear

    $accept (39)
        on left: 0
    unit (40)
        on left: 1 2
        on right: 0 2
    define_or_state (41)
        on left: 3 4 5 6
        on right: 1 2
    inst_block <block> (42)
        on left: 7
        on right: 5
    block <block> (43)
        on left: 8
        on right: 30
    decl_list <decls> (44)
        on left: 9 10
        on right: 7
    state_list <states> (45)
        on left: 11 12
        on right: 7 8
    decls <decls> (46)
        on left: 13 14
        on right: 10 14
    declaration <declaration> (47)
        on left: 15 16 17 18
        on right: 13 14
    states <states> (48)
        on left: 19 20
        on right: 12 20
    statement <statement> (49)
        on left: 21 22 23 24 25 26 27 28 29 30
        on right: 19 20 25 26 27
    assign <assign> (50)
        on left: 31 32 33
        on right: 22
    expr <expr> (51)
        on left: 34 35 36 37 38 39 40 41 42 43 44 45 46 47
        on right: 25 26 27 31 32 33 34 35 36 37 38 39 40 41 42 43 49 50
    value <value> (52)
        on left: 48
        on right: 15 16 17 18 28 29 31 32 33 44
    args <args> (53)
        on left: 49 50
        on right: 23 46 50


State 0

    0 $accept: • unit "end of file"
    1 unit: • define_or_state
    2     | • unit define_or_state
    3 define_or_state: • error ';'
    4                | • "def" "identifier" ':' "Register" ';'
    5                | • "def" "identifier" ':' "Instruction" inst_block
    6                | • "let" "projectName" '=' "identifier" ';'

    error  shift, and go to state 1
    "def"  shift, and go to state 2
    "let"  shift, and go to state 3

    unit             go to state 4
    define_or_state  go to state 5


State 1

    3 define_or_state: error • ';'

    ';'  shift, and go to state 6


State 2

    4 define_or_state: "def" • "identifier" ':' "Register" ';'
    5                | "def" • "identifier" ':' "Instruction" inst_block

    "identifier"  shift, and go to state 7


State 3

    6 define_or_state: "let" • "projectName" '=' "identifier" ';'

    "projectName"  shift, and go to state 8


State 4

    0 $accept: unit • "end of file"
    2 unit: unit • define_or_state
    3 define_or_state: • error ';'
    4                | • "def" "identifier" ':' "Register" ';'
    5                | • "def" "identifier" ':' "Instruction" inst_block
    6                | • "let" "projectName" '=' "identifier" ';'

    "end of file"  shift, and go to state 9
    error          shift, and go to state 1
    "def"          shift, and go to state 2
    "let"          shift, and go to state 3

    define_or_state  go to state 10


State 5

    1 unit: define_or_state •

    $default  reduce using rule 1 (unit)


State 6

    3 define_or_state: error ';' •

    $default  reduce using rule 3 (define_or_state)


State 7

    4 define_or_state: "def" "identifier" • ':' "Register" ';'
    5                | "def" "identifier" • ':' "Instruction" inst_block

    ':'  shift, and go to state 11


State 8

    6 define_or_state: "let" "projectName" • '=' "identifier" ';'

    '='  shift, and go to state 12


State 9

    0 $accept: unit "end of file" •

    $default  accept


State 10

    2 unit: unit define_or_state •

    $default  reduce using rule 2 (unit)


State 11

    4 define_or_state: "def" "identifier" ':' • "Register" ';'
    5                | "def" "identifier" ':' • "Instruction" inst_block

    "Register"     shift, and go to state 13
    "Instruction"  shift, and go to state 14


State 12

    6 define_or_state: "let" "projectName" '=' • "identifier" ';'

    "identifier"  shift, and go to state 15


State 13

    4 define_or_state: "def" "identifier" ':' "Register" • ';'

    ';'  shift, and go to state 16


State 14

    5 define_or_state: "def" "identifier" ':' "Instruction" • inst_block
    7 inst_block: • '{' decl_list state_list '}'

    '{'  shift, and go to state 17

    inst_block  go to state 18


State 15

    6 define_or_state: "let" "projectName" '=' "identifier" • ';'

    ';'  shift, and go to state 19


State 16

    4 define_or_state: "def" "identifier" ':' "Register" ';' •

    $default  reduce using rule 4 (define_or_state)


State 17

    7 inst_block: '{' • decl_list state_list '}'
    9 decl_list: ε •  ["identifier", "if", "while", "let", "load", "store", ';', '{', '}']
   10          | • decls
   13 decls: • declaration
   14      | • decls declaration
   15 declaration: • "def" value ':' "local" ';'
   16            | • "def" value ':' "rd" ';'
   17            | • "def" value ':' "rs1" ';'
   18            | • "def" value ':' "rs2" ';'

    "def"  shift, and go to state 20

    $default  reduce using rule 9 (decl_list)

    decl_list    go to state 21
    decls        go to state 22
    declaration  go to state 23


State 18

    5 define_or_state: "def" "identifier" ':' "Instruction" inst_block •

    $default  reduce using rule 5 (define_or_state)


State 19

    6 define_or_state: "let" "projectName" '=' "identifier" ';' •

    $default  reduce using rule 6 (define_or_state)


State 20

   15 declaration: "def" • value ':' "local" ';'
   16            | "def" • value ':' "rd" ';'
   17            | "def" • value ':' "rs1" ';'
   18            | "def" • value ':' "rs2" ';'
   48 value: • "identifier"

    "identifier"  shift, and go to state 24

    value  go to state 25


State 21

    7 inst_block: '{' decl_list • state_list '}'
    8 block: • '{' state_list '}'
   11 state_list: ε •  ['}']
   12           | • states
   19 states: • statement
   20       | • states statement
   21 statement: • ';'
   22          | • assign ';'
   23          | • "identifier" '(' args ')' ';'
   24          | • "identifier" '(' ')' ';'
   25          | • "if" '(' expr ')' statement
   26          | • "if" '(' expr ')' statement "else" statement
   27          | • "while" '(' expr ')' statement
   28          | • "load" value "<=" '<' value '>' ';'
   29          | • "store" '<' value '>' "<=" value ';'
   30          | • block
   31 assign: • "let" value '=' expr
   32       | • "let" value "+=" expr
   33       | • "let" value "-=" expr

    "identifier"  shift, and go to state 26
    "if"          shift, and go to state 27
    "while"       shift, and go to state 28
    "let"         shift, and go to state 29
    "load"        shift, and go to state 30
    "store"       shift, and go to state 31
    ';'           shift, and go to state 32
    '{'           shift, and go to state 33

    $default  reduce using rule 11 (state_list)

    block       go to state 34
    state_list  go to state 35
    states      go to state 36
    statement   go to state 37
    assign      go to state 38


State 22

   10 decl_list: decls •  ["identifier", "if", "while", "let", "load", "store", ';', '{', '}']
   14 decls: decls • declaration
   15 declaration: • "def" value ':' "local" ';'
   16            | • "def" value ':' "rd" ';'
   17            | • "def" value ':' "rs1" ';'
   18            | • "def" value ':' "rs2" ';'

    "def"  shift, and go to state 20

    $default  reduce using rule 10 (decl_list)

    declaration  go to state 39


State 23

   13 decls: declaration •

    $default  reduce using rule 13 (decls)


State 24

   48 value: "identifier" •

    $default  reduce using rule 48 (value)


State 25

   15 declaration: "def" value • ':' "local" ';'
   16            | "def" value • ':' "rd" ';'
   17            | "def" value • ':' "rs1" ';'
   18            | "def" value • ':' "rs2" ';'

    ':'  shift, and go to state 40


State 26

   23 statement: "identifier" • '(' args ')' ';'
   24          | "identifier" • '(' ')' ';'

    '('  shift, and go to state 41


State 27

   25 statement: "if" • '(' expr ')' statement
   26          | "if" • '(' expr ')' statement "else" statement

    '('  shift, and go to state 42


State 28

   27 statement: "while" • '(' expr ')' statement

    '('  shift, and go to state 43


State 29

   31 assign: "let" • value '=' expr
   32       | "let" • value "+=" expr
   33       | "let" • value "-=" expr
   48 value: • "identifier"

    "identifier"  shift, and go to state 24

    value  go to state 44


State 30

   28 statement: "load" • value "<=" '<' value '>' ';'
   48 value: • "identifier"

    "identifier"  shift, and go to state 24

    value  go to state 45


State 31

   29 statement: "store" • '<' value '>' "<=" value ';'

    '<'  shift, and go to state 46


State 32

   21 statement: ';' •

    $default  reduce using rule 21 (statement)


State 33

    8 block: • '{' state_list '}'
    8      | '{' • state_list '}'
   11 state_list: ε •  ['}']
   12           | • states
   19 states: • statement
   20       | • states statement
   21 statement: • ';'
   22          | • assign ';'
   23          | • "identifier" '(' args ')' ';'
   24          | • "identifier" '(' ')' ';'
   25          | • "if" '(' expr ')' statement
   26          | • "if" '(' expr ')' statement "else" statement
   27          | • "while" '(' expr ')' statement
   28          | • "load" value "<=" '<' value '>' ';'
   29          | • "store" '<' value '>' "<=" value ';'
   30          | • block
   31 assign: • "let" value '=' expr
   32       | • "let" value "+=" expr
   33       | • "let" value "-=" expr

    "identifier"  shift, and go to state 26
    "if"          shift, and go to state 27
    "while"       shift, and go to state 28
    "let"         shift, and go to state 29
    "load"        shift, and go to state 30
    "store"       shift, and go to state 31
    ';'           shift, and go to state 32
    '{'           shift, and go to state 33

    $default  reduce using rule 11 (state_list)

    block       go to state 34
    state_list  go to state 47
    states      go to state 36
    statement   go to state 37
    assign      go to state 38


State 34

   30 statement: block •

    $default  reduce using rule 30 (statement)


State 35

    7 inst_block: '{' decl_list state_list • '}'

    '}'  shift, and go to state 48


State 36

    8 block: • '{' state_list '}'
   12 state_list: states •  ['}']
   20 states: states • statement
   21 statement: • ';'
   22          | • assign ';'
   23          | • "identifier" '(' args ')' ';'
   24          | • "identifier" '(' ')' ';'
   25          | • "if" '(' expr ')' statement
   26          | • "if" '(' expr ')' statement "else" statement
   27          | • "while" '(' expr ')' statement
   28          | • "load" value "<=" '<' value '>' ';'
   29          | • "store" '<' value '>' "<=" value ';'
   30          | • block
   31 assign: • "let" value '=' expr
   32       | • "let" value "+=" expr
   33       | • "let" value "-=" expr

    "identifier"  shift, and go to state 26
    "if"          shift, and go to state 27
    "while"       shift, and go to state 28
    "let"         shift, and go to state 29
    "load"        shift, and go to state 30
    "store"       shift, and go to state 31
    ';'           shift, and go to state 32
    '{'           shift, and go to state 33

    $default  reduce using rule 12 (state_list)

    block      go to state 34
    statement  go to state 49
    assign     go to state 38


State 37

   19 states: statement •

    $default  reduce using rule 19 (states)


State 38

   22 statement: assign • ';'

    ';'  shift, and go to state 50


State 39

   14 decls: decls declaration •

    $default  reduce using rule 14 (decls)


State 40

   15 declaration: "def" value ':' • "local" ';'
   16            | "def" value ':' • "rd" ';'
   17            | "def" value ':' • "rs1" ';'
   18            | "def" value ':' • "rs2" ';'

    "local"  shift, and go to state 51
    "rd"     shift, and go to state 52
    "rs1"    shift, and go to state 53
    "rs2"    shift, and go to state 54


State 41

   23 statement: "identifier" '(' • args ')' ';'
   24          | "identifier" '(' • ')' ';'
   34 expr: • expr "&&" expr
   35     | • expr "||" expr
   36     | • expr "==" expr
   37     | • expr "!=" expr
   38     | • expr ">=" expr
   39     | • expr "<=" expr
   40     | • expr '>' expr
   41     | • expr '<' expr
   42     | • '-' expr
   43     | • '(' expr ')'
   44     | • value
   45     | • "ival"
   46     | • "identifier" '(' args ')'
   47     | • "identifier" '(' ')'
   48 value: • "identifier"
   49 args: • expr
   50     | • args ',' expr

    "ival"        shift, and go to state 55
    "identifier"  shift, and go to state 56
    '('           shift, and go to state 57
    ')'           shift, and go to state 58
    '-'           shift, and go to state 59

    expr   go to state 60
    value  go to state 61
    args   go to state 62


State 42

   25 statement: "if" '(' • expr ')' statement
   26          | "if" '(' • expr ')' statement "else" statement
   34 expr: • expr "&&" expr
   35     | • expr "||" expr
   36     | • expr "==" expr
   37     | • expr "!=" expr
   38     | • expr ">=" expr
   39     | • expr "<=" expr
   40     | • expr '>' expr
   41     | • expr '<' expr
   42     | • '-' expr
   43     | • '(' expr ')'
   44     | • value
   45     | • "ival"
   46     | • "identifier" '(' args ')'
   47     | • "identifier" '(' ')'
   48 value: • "identifier"

    "ival"        shift, and go to state 55
    "identifier"  shift, and go to state 56
    '('           shift, and go to state 57
    '-'           shift, and go to state 59

    expr   go to state 63
    value  go to state 61


State 43

   27 statement: "while" '(' • expr ')' statement
   34 expr: • expr "&&" expr
   35     | • expr "||" expr
   36     | • expr "==" expr
   37     | • expr "!=" expr
   38     | • expr ">=" expr
   39     | • expr "<=" expr
   40     | • expr '>' expr
   41     | • expr '<' expr
   42     | • '-' expr
   43     | • '(' expr ')'
   44     | • value
   45     | • "ival"
   46     | • "identifier" '(' args ')'
   47     | • "identifier" '(' ')'
   48 value: • "identifier"

    "ival"        shift, and go to state 55
    "identifier"  shift, and go to state 56
    '('           shift, and go to state 57
    '-'           shift, and go to state 59

    expr   go to state 64
    value  go to state 61


State 44

   31 assign: "let" value • '=' expr
   32       | "let" value • "+=" expr
   33       | "let" value • "-=" expr

    "+="  shift, and go to state 65
    "-="  shift, and go to state 66
    '='   shift, and go to state 67


State 45

   28 statement: "load" value • "<=" '<' value '>' ';'

    "<="  shift, and go to state 68


State 46

   29 statement: "store" '<' • value '>' "<=" value ';'
   48 value: • "identifier"

    "identifier"  shift, and go to state 24

    value  go to state 69


State 47

    8 block: '{' state_list • '}'

    '}'  shift, and go to state 70


State 48

    7 inst_block: '{' decl_list state_list '}' •

    $default  reduce using rule 7 (inst_block)


State 49

   20 states: states statement •

    $default  reduce using rule 20 (states)


State 50

   22 statement: assign ';' •

    $default  reduce using rule 22 (statement)


State 51

   15 declaration: "def" value ':' "local" • ';'

    ';'  shift, and go to state 71


State 52

   16 declaration: "def" value ':' "rd" • ';'

    ';'  shift, and go to state 72


State 53

   17 declaration: "def" value ':' "rs1" • ';'

    ';'  shift, and go to state 73


State 54

   18 declaration: "def" value ':' "rs2" • ';'

    ';'  shift, and go to state 74


State 55

   45 expr: "ival" •

    $default  reduce using rule 45 (expr)


State 56

   46 expr: "identifier" • '(' args ')'
   47     | "identifier" • '(' ')'
   48 value: "identifier" •  ["||", "&&", "==", "!=", ">=", "<=", '>', '<', ';', ')', ',']

    '('  shift, and go to state 75

    $default  reduce using rule 48 (value)


State 57

   34 expr: • expr "&&" expr
   35     | • expr "||" expr
   36     | • expr "==" expr
   37     | • expr "!=" expr
   38     | • expr ">=" expr
   39     | • expr "<=" expr
   40     | • expr '>' expr
   41     | • expr '<' expr
   42     | • '-' expr
   43     | • '(' expr ')'
   43     | '(' • expr ')'
   44     | • value
   45     | • "ival"
   46     | • "identifier" '(' args ')'
   47     | • "identifier" '(' ')'
   48 value: • "identifier"

    "ival"        shift, and go to state 55
    "identifier"  shift, and go to state 56
    '('           shift, and go to state 57
    '-'           shift, and go to state 59

    expr   go to state 76
    value  go to state 61


State 58

   24 statement: "identifier" '(' ')' • ';'

    ';'  shift, and go to state 77


State 59

   34 expr: • expr "&&" expr
   35     | • expr "||" expr
   36     | • expr "==" expr
   37     | • expr "!=" expr
   38     | • expr ">=" expr
   39     | • expr "<=" expr
   40     | • expr '>' expr
   41     | • expr '<' expr
   42     | • '-' expr
   42     | '-' • expr
   43     | • '(' expr ')'
   44     | • value
   45     | • "ival"
   46     | • "identifier" '(' args ')'
   47     | • "identifier" '(' ')'
   48 value: • "identifier"

    "ival"        shift, and go to state 55
    "identifier"  shift, and go to state 56
    '('           shift, and go to state 57
    '-'           shift, and go to state 59

    expr   go to state 78
    value  go to state 61


State 60

   34 expr: expr • "&&" expr
   35     | expr • "||" expr
   36     | expr • "==" expr
   37     | expr • "!=" expr
   38     | expr • ">=" expr
   39     | expr • "<=" expr
   40     | expr • '>' expr
   41     | expr • '<' expr
   49 args: expr •  [')', ',']

    "||"  shift, and go to state 79
    "&&"  shift, and go to state 80
    "=="  shift, and go to state 81
    "!="  shift, and go to state 82
    ">="  shift, and go to state 83
    "<="  shift, and go to state 84
    '>'   shift, and go to state 85
    '<'   shift, and go to state 86

    $default  reduce using rule 49 (args)


State 61

   44 expr: value •

    $default  reduce using rule 44 (expr)


State 62

   23 statement: "identifier" '(' args • ')' ';'
   50 args: args • ',' expr

    ')'  shift, and go to state 87
    ','  shift, and go to state 88


State 63

   25 statement: "if" '(' expr • ')' statement
   26          | "if" '(' expr • ')' statement "else" statement
   34 expr: expr • "&&" expr
   35     | expr • "||" expr
   36     | expr • "==" expr
   37     | expr • "!=" expr
   38     | expr • ">=" expr
   39     | expr • "<=" expr
   40     | expr • '>' expr
   41     | expr • '<' expr

    "||"  shift, and go to state 79
    "&&"  shift, and go to state 80
    "=="  shift, and go to state 81
    "!="  shift, and go to state 82
    ">="  shift, and go to state 83
    "<="  shift, and go to state 84
    '>'   shift, and go to state 85
    '<'   shift, and go to state 86
    ')'   shift, and go to state 89


State 64

   27 statement: "while" '(' expr • ')' statement
   34 expr: expr • "&&" expr
   35     | expr • "||" expr
   36     | expr • "==" expr
   37     | expr • "!=" expr
   38     | expr • ">=" expr
   39     | expr • "<=" expr
   40     | expr • '>' expr
   41     | expr • '<' expr

    "||"  shift, and go to state 79
    "&&"  shift, and go to state 80
    "=="  shift, and go to state 81
    "!="  shift, and go to state 82
    ">="  shift, and go to state 83
    "<="  shift, and go to state 84
    '>'   shift, and go to state 85
    '<'   shift, and go to state 86
    ')'   shift, and go to state 90


State 65

   32 assign: "let" value "+=" • expr
   34 expr: • expr "&&" expr
   35     | • expr "||" expr
   36     | • expr "==" expr
   37     | • expr "!=" expr
   38     | • expr ">=" expr
   39     | • expr "<=" expr
   40     | • expr '>' expr
   41     | • expr '<' expr
   42     | • '-' expr
   43     | • '(' expr ')'
   44     | • value
   45     | • "ival"
   46     | • "identifier" '(' args ')'
   47     | • "identifier" '(' ')'
   48 value: • "identifier"

    "ival"        shift, and go to state 55
    "identifier"  shift, and go to state 56
    '('           shift, and go to state 57
    '-'           shift, and go to state 59

    expr   go to state 91
    value  go to state 61


State 66

   33 assign: "let" value "-=" • expr
   34 expr: • expr "&&" expr
   35     | • expr "||" expr
   36     | • expr "==" expr
   37     | • expr "!=" expr
   38     | • expr ">=" expr
   39     | • expr "<=" expr
   40     | • expr '>' expr
   41     | • expr '<' expr
   42     | • '-' expr
   43     | • '(' expr ')'
   44     | • value
   45     | • "ival"
   46     | • "identifier" '(' args ')'
   47     | • "identifier" '(' ')'
   48 value: • "identifier"

    "ival"        shift, and go to state 55
    "identifier"  shift, and go to state 56
    '('           shift, and go to state 57
    '-'           shift, and go to state 59

    expr   go to state 92
    value  go to state 61


State 67

   31 assign: "let" value '=' • expr
   34 expr: • expr "&&" expr
   35     | • expr "||" expr
   36     | • expr "==" expr
   37     | • expr "!=" expr
   38     | • expr ">=" expr
   39     | • expr "<=" expr
   40     | • expr '>' expr
   41     | • expr '<' expr
   42     | • '-' expr
   43     | • '(' expr ')'
   44     | • value
   45     | • "ival"
   46     | • "identifier" '(' args ')'
   47     | • "identifier" '(' ')'
   48 value: • "identifier"

    "ival"        shift, and go to state 55
    "identifier"  shift, and go to state 56
    '('           shift, and go to state 57
    '-'           shift, and go to state 59

    expr   go to state 93
    value  go to state 61


State 68

   28 statement: "load" value "<=" • '<' value '>' ';'

    '<'  shift, and go to state 94


State 69

   29 statement: "store" '<' value • '>' "<=" value ';'

    '>'  shift, and go to state 95


State 70

    8 block: '{' state_list '}' •

    $default  reduce using rule 8 (block)


State 71

   15 declaration: "def" value ':' "local" ';' •

    $default  reduce using rule 15 (declaration)


State 72

   16 declaration: "def" value ':' "rd" ';' •

    $default  reduce using rule 16 (declaration)


State 73

   17 declaration: "def" value ':' "rs1" ';' •

    $default  reduce using rule 17 (declaration)


State 74

   18 declaration: "def" value ':' "rs2" ';' •

    $default  reduce using rule 18 (declaration)


State 75

   34 expr: • expr "&&" expr
   35     | • expr "||" expr
   36     | • expr "==" expr
   37     | • expr "!=" expr
   38     | • expr ">=" expr
   39     | • expr "<=" expr
   40     | • expr '>' expr
   41     | • expr '<' expr
   42     | • '-' expr
   43     | • '(' expr ')'
   44     | • value
   45     | • "ival"
   46     | • "identifier" '(' args ')'
   46     | "identifier" '(' • args ')'
   47     | • "identifier" '(' ')'
   47     | "identifier" '(' • ')'
   48 value: • "identifier"
   49 args: • expr
   50     | • args ',' expr

    "ival"        shift, and go to state 55
    "identifier"  shift, and go to state 56
    '('           shift, and go to state 57
    ')'           shift, and go to state 96
    '-'           shift, and go to state 59

    expr   go to state 60
    value  go to state 61
    args   go to state 97


State 76

   34 expr: expr • "&&" expr
   35     | expr • "||" expr
   36     | expr • "==" expr
   37     | expr • "!=" expr
   38     | expr • ">=" expr
   39     | expr • "<=" expr
   40     | expr • '>' expr
   41     | expr • '<' expr
   43     | '(' expr • ')'

    "||"  shift, and go to state 79
    "&&"  shift, and go to state 80
    "=="  shift, and go to state 81
    "!="  shift, and go to state 82
    ">="  shift, and go to state 83
    "<="  shift, and go to state 84
    '>'   shift, and go to state 85
    '<'   shift, and go to state 86
    ')'   shift, and go to state 98


State 77

   24 statement: "identifier" '(' ')' ';' •

    $default  reduce using rule 24 (statement)


State 78

   34 expr: expr • "&&" expr
   35     | expr • "||" expr
   36     | expr • "==" expr
   37     | expr • "!=" expr
   38     | expr • ">=" expr
   39     | expr • "<=" expr
   40     | expr • '>' expr
   41     | expr • '<' expr
   42     | '-' expr •  ["||", "&&", "==", "!=", ">=", "<=", '>', '<', ';', ')', ',']

    $default  reduce using rule 42 (expr)

    Conflict between rule 42 and token "||" resolved as reduce ("||" < NEG).
    Conflict between rule 42 and token "&&" resolved as reduce ("&&" < NEG).
    Conflict between rule 42 and token "==" resolved as reduce ("==" < NEG).
    Conflict between rule 42 and token "!=" resolved as reduce ("!=" < NEG).
    Conflict between rule 42 and token ">=" resolved as reduce (">=" < NEG).
    Conflict between rule 42 and token "<=" resolved as reduce ("<=" < NEG).
    Conflict between rule 42 and token '>' resolved as reduce ('>' < NEG).
    Conflict between rule 42 and token '<' resolved as reduce ('<' < NEG).


State 79

   34 expr: • expr "&&" expr
   35     | • expr "||" expr
   35     | expr "||" • expr
   36     | • expr "==" expr
   37     | • expr "!=" expr
   38     | • expr ">=" expr
   39     | • expr "<=" expr
   40     | • expr '>' expr
   41     | • expr '<' expr
   42     | • '-' expr
   43     | • '(' expr ')'
   44     | • value
   45     | • "ival"
   46     | • "identifier" '(' args ')'
   47     | • "identifier" '(' ')'
   48 value: • "identifier"

    "ival"        shift, and go to state 55
    "identifier"  shift, and go to state 56
    '('           shift, and go to state 57
    '-'           shift, and go to state 59

    expr   go to state 99
    value  go to state 61


State 80
